--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>Nature watching</h1>
-        <h2>自然しらべ用レポジトリ</h2>
+        <h2>自然しらべ レポジトリ by SISPA team</h2>
         <a href="https://github.com/NACSJ/nature_watching" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
